# rag-sample

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
docker/: setup_data.py  setup_db.py  start_vector_store.sh
mypackage/: main.py
mypackage/application/: startup_application.py
mypackage/core/: machine_learning.py
mypackage/dataaccess/: client_providers.py  configs.py  database.py  interfaces.py  repositories.py
mypackage/domain/: models.py
mypackage/presentation/: schemas.py  startups.py
mypackage/service/: interfaces.py  startups.py
